# StrataSolutionsWorkers

./: CMakeLists.txt
forms/: mainwindow.ui
include/: generateWorker.h  mainwindow.h
resourses/: resourses.qrc
src/: generateWorker.cpp  mainwindow.cpp
